--- a/index.html
+++ b/index.html
@@ -3,53 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>Cecilia's Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 
-    <!-- Preconnect to Google Fonts for performance improvement -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-    <!-- Google Fonts link for Roboto, make sure it's exactly the same as the working test case -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
-
-    <!-- Bootstrap CSS for styling and responsiveness -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <!-- Custom stylesheet for additional styles -->
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Prata&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Header section with navigation -->
-    <header class="container">
-        <h1>Welcome to Cecilia's Page</h1>
+    <header>
+        <h1>Cecilia's Portfolio</h1>
         <nav>
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="education.html">Education</a></li>
-                <li class="nav-item"><a class="nav-link" href="experience.html">Experience</a></li>
-                <li class="nav-item"><a class="nav-link" href="certifications.html">Certifications</a></li>
-                <li class="nav-item"><a class="nav-link" href="hobbies.html">Hobbies</a></li>
-                <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="education.html">Education</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="skills.html">Skills</a></li>
+                <li><a href="hobbies.html">Interests</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
 
-    <!-- Main content area -->
     <div class="container">
         <section>
-            <h2>About Me</h2>
-            <p>Hi, I'm Cecilia, a professional based in Washington, DC. This website is a comprehensive look at my professional journey and personal interests.</p>
+            <div class="text-content">
+                <h3>Welcome to Cecilia’s world</h3>
+                <p>Hi, I'm Xizi Chen (Cecilia), a dedicated professional with a passion for innovation and learning. After six years in the legal field, I am now pursuing an MBA at Georgetown University.</p>
+                <p>Throughout my journey, I've gained valuable insights and realized the multifaceted nature of life's purpose. I've always considered myself a unique individual in an ordinary way, driven by dreams and a desire to positively impact those around me and bring greater meaning to life within my sphere of influence.</p>
+            </div>
+            <div class="image-container">
+                <img src="image/Pro Pic.JPG" alt="My Photo" class="profile-photo">
+            </div>
         </section>
     </div>
 
-    <!-- Footer section with contact link -->
-    <footer class="container text-center">
-        <p>Contact me at: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <footer>
+        <p>&copy; 2024 Cecilia's Portfolio. All rights reserved.</p>
     </footer>
-
-    <!-- Bootstrap and jQuery Scripts for functionality -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
