--- a/skills.html
+++ b/skills.html
@@ -19,8 +19,12 @@
                 <li><a href="education.html">Education</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="skills.html" class="active">Skills</a></li>
-                <li><a href="hobbies.html">Interests</a></li>
+                <li><a href="interests.html">Interests</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li class="search-container"> <!-- Note the list item -->
+                    <input class="form-control search-input" type="text" placeholder="" aria-label="Search">
+                    <button class="btn btn-outline-success search-btn" type="submit">Search</button>
+                </li>
             </ul>
         </nav>
     </header>
