--- a/experience.html
+++ b/experience.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Prata&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <h1>Cecilia's Portfolio</h1>
@@ -30,7 +31,7 @@
     </header>
 
     <!-- Experience Section -->
-    <section class="experience">
+    <section class="experience-section">
         <div class="experience-entry" style="--animation-order:0;">
             <h2>AMERICAN CHEMICAL SOCIETY</h2>
             <h3>2022 Summer</h3>
@@ -72,6 +73,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.min.js" integrity="sha384-9bQn9a4NlD8DNHsU4wxMa6lfao7JjSnKNutY+5DzgCxl1CrttI7z9e3vx4NE X7a" crossorigin="anonymous"></script>
+    
     <footer>
         <p>&copy; 2024 Cecilia's Portfolio. All rights reserved.</p>
     </footer>
