--- a/education.html
+++ b/education.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cecilia's Portfolio - Education</title>
-    <link rel="stylesheet" href="styles1.css"> <!-- Make sure this href matches your stylesheet's filename -->
+    <link rel="stylesheet" href="education.css"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
