--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cecilia's Portfolio - Experience</title>
-    <link rel="stylesheet" href="styles2.css"> <!-- Make sure this href matches your stylesheet's filename -->
+    <link rel="stylesheet" href="styles2.css"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="interests.html">Interests</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li class="search-container"> <!-- Note the list item -->
+                <li class="search-container"> 
                     <input class="form-control search-input" type="text" placeholder="" aria-label="Search">
                     <button class="btn btn-outline-success search-btn" type="submit">Search</button>
                 </li>
