--- a/experience.html
+++ b/experience.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cecilia's Portfolio - Experience</title>
-    <link rel="stylesheet" href="styles2.css"> 
+    <link rel="stylesheet" href="experience.css"> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
