--- a/interests.html
+++ b/interests.html
@@ -24,7 +24,7 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="interests.html" class="active">Interests</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li class="search-container"> <!-- Note the list item -->
+                <li class="search-container"> 
                     <input class="form-control search-input" type="text" placeholder="" aria-label="Search">
                     <button class="btn btn-outline-success search-btn" type="submit">Search</button>
                 </li>
