--- a/interests.html
+++ b/interests.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cecilia's Portfolio</title>
-    <link rel="stylesheet" href="styles4.css">
+    <link rel="stylesheet" href="interests.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f5f5c6XG9l3O2OmgFyMQ9oaY5lSmug6paW27eU7kgfPRwZ+cnijD2T/5" crossorigin="anonymous">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
