--- a/experience.html
+++ b/experience.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cecilia's Portfolio - Experience</title>
     <link rel="stylesheet" href="experience.css"> 
-
+<!-- found this code from Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Prata&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="interests.html">Interests</a></li>
                 <li><a href="contact.html">Contact</a></li>
-                <li class="search-container"> 
+                <li class="search-container"> <!-- found this code from Bootstrape -->
                     <input class="form-control search-input" type="text" placeholder="" aria-label="Search">
                     <button class="btn btn-outline-success search-btn" type="submit">Search</button>
                 </li>
@@ -30,11 +30,12 @@
         </nav>
     </header>
 
+    <!-- found this code from Bootstrape -->
     <!-- Experience Section -->
     <section class="experience-section">
         <div class="experience-entry" style="--animation-order:0;">
             <h2>AMERICAN CHEMICAL SOCIETY</h2>
-            <h3>2022 Summer</h3>
+            <h3>2023 Summer</h3>
             <h3>Business Data Analyst</h3>
            
             <ul>
