--- a/interests.html
+++ b/interests.html
@@ -6,7 +6,7 @@
     <title>Cecilia's Portfolio</title>
     <link rel="stylesheet" href="interests.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f5f5c6XG9l3O2OmgFyMQ9oaY5lSmug6paW27eU7kgfPRwZ+cnijD2T/5" crossorigin="anonymous">
-    
+    <!-- found this code google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Prata&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             </ul>
         </nav>
     </header>
-
+<!-- found this code from Bootstrape and asking GPT-->
     <div class="slideshow">
         <div class="slide active" style="background-image: url('image/Picture1.png');"></div>
         <div class="slide" style="background-image: url('image/Picture2.png');"></div>
